--- a/Challenge 1/Jenkinsfile
+++ b/Challenge 1/Jenkinsfile
@@ -9,13 +9,25 @@ pipeline {
         choice(name: 'GROUP_DEPARTMENT', choices: ['Contabilidad', 'Finanzas', 'Tecnologia'], description: '')
     }
     stages {
-        stage('Prod') {
+        stage('Create User') {
             steps {
                 script{
                     echo "Creating user with temporal password for ${params.NAME_LASTNAME}"
                     sudo useradd -m ${params.LOGIN}
+                }
+            }
+        }
+        stage('Add Password') {
+            steps {
+                script{
                     echo ${PASSWORD} | sudo passwd ${params.LOGIN} --stding
                     echo "Password created: ${PASSWORD}"
+                }
+            }
+        }
+        stage('Add Group') {
+            steps {
+                script{
                     sudo usermod -aG ${params.GROUP_DEPARTMENT} ${params.LOGIN}
                     echo "Group added: ${GROUP_DEPARTMENT}"
                 }
