--- a/Challenge 1/Jenkinsfile
+++ b/Challenge 1/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stage('Create User') {
             steps {
                 echo "Creating user with temporal password for ${params.NAME_LASTNAME}"
-                sudo useradd -m ${params.LOGIN}
+                useradd -m ${params.LOGIN}
             }
         }
         stage('Add Password') {
@@ -25,7 +25,7 @@ pipeline {
         stage('Add Group') {
             steps {
 
-                sudo usermod -aG ${params.GROUP_DEPARTMENT} ${params.LOGIN}
+                usermod -aG ${params.GROUP_DEPARTMENT} ${params.LOGIN}
                 echo "Group added: ${GROUP_DEPARTMENT}"
             }
         }
