--- a/Challenge 1/Jenkinsfile
+++ b/Challenge 1/Jenkinsfile
@@ -9,23 +9,26 @@ pipeline {
     stages {
         stage('Create User') {
             steps {
-                echo "Creating user with temporal password for ${params.NAME_LASTNAME}"
-                useradd -m "${params.LOGIN}"
+                script{
+                    echo "Creating user with temporal password for ${params.NAME_LASTNAME}"
+                    sh(script: sudo useradd -m "${params.LOGIN}", returnStdout: true).trim()
+                }
             }
         }
         stage('Add Password') {
             steps {
                 script{
                     PASSWORD = sh(script: 'tr -dc A-Za-z0-9 </dev/urandom | head -c 13; echo', returnStdout: true).trim()
-                    echo "${PASSWORD}" | sudo passwd "${params.LOGIN}" --stding
+                    sh(script: echo "${PASSWORD}" | sudo passwd "${params.LOGIN}" --stding, returnStdout: true).trim()
                     echo "Password created: ${PASSWORD}"
                 }
             }
         }
         stage('Add Group') {
             steps {
-                usermod -aG "${params.GROUP_DEPARTMENT}" "${params.LOGIN}"
-                echo "Group added: ${GROUP_DEPARTMENT}"
+                    sh(script: sudo usermod -aG "${params.GROUP_DEPARTMENT}" "${params.LOGIN}", returnStdout: true).trim()
+                    echo "Group added: ${GROUP_DEPARTMENT}"
+                }
             }
         }
     }
