--- a/Challenge 1/Jenkinsfile
+++ b/Challenge 1/Jenkinsfile
@@ -19,8 +19,10 @@ pipeline {
             steps {
                 script{
                     PASSWORD = sh(script: 'tr -dc A-Za-z0-9 </dev/urandom | head -c 13; echo', returnStdout: true).trim()
-                    sh(script: "echo ${PASSWORD} | sudo passwd ${params.LOGIN} --stdin", returnStdout: true).trim()
+                    sh "echo ${PASSWORD} | sudo passwd --stdin ${params.LOGIN}"
                     echo "Password created: ${PASSWORD}"
+                    sh "sudo passwd -e ${params.LOGIN}"
+                    echo "Password expirated, user must change password on next login"
                 }
             }
         }
