--- a/Challenge 1/Jenkinsfile
+++ b/Challenge 1/Jenkinsfile
@@ -19,11 +19,11 @@ pipeline {
             steps {
                 script{
                     PASSWORD = sh(script: 'tr -dc A-Za-z0-9 </dev/urandom | head -c 13; echo', returnStdout: true).trim()
-                    //sh "echo ${PASSWORD} | sudo passwd -e --stdin ${params.LOGIN}"
-                    sh "echo '${params.LOGIN}:${PASSWORD}' | sudo chpasswd -S"
+                    sh "echo -e ${PASSWORD}\n${PASSWORD} | sudo passwd -e ${params.LOGIN}"
+                    //sh "echo '${params.LOGIN}:${PASSWORD}' | sudo chpasswd -S"
                     echo "Password created: ${PASSWORD}"
-                    sh "sudo passwd -e  ${params.LOGIN}"
-                    echo "Password expirated. Change on next login"
+                    //sh "sudo passwd -e  ${params.LOGIN}"
+                    //echo "Password expirated. Change on next login"
                 }
             }
         }
